--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
             }
 
             .landscape.mobile #counters {
-                grid-template-columns: repeat(3, 1fr); /* 横向きスマホの場合は3列 */
-                grid-template-rows: repeat(2, 1fr); /* 2行 */
+                grid-template-columns: 1fr 1fr 1fr; /* 横向きスマホの場合は3列 */
+                grid-template-rows: 1fr 1fr; /* 2行 */
             }
 
             .counter-container {
