--- a/index.html
+++ b/index.html
@@ -269,8 +269,11 @@
             }
 
             .landscape.mobile #counters {
-                grid-template-columns: 1fr 1fr 1fr; /* 横向きスマホの場合は3列 */
-                grid-template-rows: 1fr 1fr; /* 2行 */
+                grid-template-columns: repeat(3, 1fr); /* 横向きスマホの場合は3列 */
+                grid-template-rows: 1fr 1fr; /* 自動調整 */
+                grid-template-areas:
+                  "item1 item2 item3"
+                  "item4 item5 .";
             }
 
             .counter-container {
@@ -289,27 +292,11 @@
             }
         }
     </style>
-    <!-- Firebase App (the core Firebase SDK) -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <!-- Firebase Realtime Database -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <!-- Include Chart.js and the data labels plugin from CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 </head>
 <body>
-    <div class="day-select">
-        <label>
-            <input type="radio" name="day" value="1" onchange="confirmDayChange(this.value)" checked> 1日目
-        </label>
-        <label>
-            <input type="radio" name="day" value="2" onchange="confirmDayChange(this.value)"> 2日目
-        </label>
-    </div>
-    <div class="current-day" id="current-day">現在の設定: 1日目</div>
-    <div class="counters-section">
-        <div id="counters" class="landscape"> <!-- 初期クラスを設定 -->
-            <div class="counter-container" id="plain-counter" style="border-top: 5px solid #007BFF;">
+    <section class="counters-section">
+        <div id="counters" class="landscape mobile">
+            <div class="counter-container" id="plain-counter" style="border-top: 5px solid #007BFF; grid-area: item1;">
                 <h2>プレーン</h2>
                 <div class="count" id="plain-count">0/30</div>
                 <div class="remaining" id="plain-remaining">残り: 30 個</div>
@@ -319,7 +306,7 @@
                     <button onclick="changeCount('plain', -1)" class="icon-minus" data-icon="-"></button>
                 </div>
             </div>
-            <div class="counter-container" id="choco-counter" style="border-top: 5px solid #8B4513;">
+            <div class="counter-container" id="choco-counter" style="border-top: 5px solid #8B4513; grid-area: item2;">
                 <h2>チョコ</h2>
                 <div class="count" id="choco-count">0/100</div>
                 <div class="remaining" id="choco-remaining">残り: 100 個</div>
@@ -329,7 +316,7 @@
                     <button onclick="changeCount('choco', -1)" class="icon-minus" data-icon="-"></button>
                 </div>
             </div>
-            <div class="counter-container" id="strawberry-counter" style="border-top: 5px solid #FF6347;">
+            <div class="counter-container" id="strawberry-counter" style="border-top: 5px solid #FF6347; grid-area: item3;">
                 <h2>いちご</h2>
                 <div class="count" id="strawberry-count">0/100</div>
                 <div class="remaining" id="strawberry-remaining">残り: 100 個</div>
@@ -339,7 +326,7 @@
                     <button onclick="changeCount('strawberry', -1)" class="icon-minus" data-icon="-"></button>
                 </div>
             </div>
-            <div class="counter-container" id="matcha-counter" style="border-top: 5px solid #3CB371;">
+            <div class="counter-container" id="matcha-counter" style="border-top: 5px solid #3CB371; grid-area: item4;">
                 <h2>抹茶</h2>
                 <div class="count" id="matcha-count">0/50</div>
                 <div class="remaining" id="matcha-remaining">残り: 50 個</div>
@@ -349,7 +336,7 @@
                     <button onclick="changeCount('matcha', -1)" class="icon-minus" data-icon="-"></button>
                 </div>
             </div>
-            <div class="counter-container" id="jdk-counter" style="border-top: 5px solid #FFD700;">
+            <div class="counter-container" id="jdk-counter" style="border-top: 5px solid #FFD700; grid-area: item5;">
                 <h2>JDK</h2>
                 <div class="count" id="jdk-count">0/20</div>
                 <div class="remaining" id="jdk-remaining">残り: 20 個</div>
@@ -360,186 +347,97 @@
                 </div>
             </div>
         </div>
-        <div class="totals-container">
-            <div class="total-title">合計</div>
-            <div class="total-value" id="total-count">総数量: 0 個</div>
-            <div class="total-value" id="total-amount">総金額: 0 円</div>
-        </div>
-    </div>
-    <div class="charts-section">
+    </section>
+
+    <section class="totals-container">
+        <div class="current-day" id="current-day">2024年8月2日</div>
+        <div class="total-title">合計金額:</div>
+        <div class="total-value" id="total-amount">0 円</div>
+    </section>
+
+    <section class="day-select">
+        <label for="day">日付を選択:</label>
+        <input type="date" id="day" name="day" value="2024-08-02">
+    </section>
+
+    <section class="charts-section">
         <div class="chart-container">
-            <canvas id="count-pie-chart"></canvas>
+            <canvas id="plain-chart"></canvas>
         </div>
         <div class="chart-container">
-            <canvas id="value-pie-chart"></canvas>
+            <canvas id="choco-chart"></canvas>
         </div>
-    </div>
+        <div class="chart-container">
+            <canvas id="strawberry-chart"></canvas>
+        </div>
+        <div class="chart-container">
+            <canvas id="matcha-chart"></canvas>
+        </div>
+        <div class="chart-container">
+            <canvas id="jdk-chart"></canvas>
+        </div>
+    </section>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.8.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.8.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.8.1/firebase-analytics.js"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const firebaseConfig = {
-                apiKey: "AIzaSyDfmjWjPl786cVBXzqlsiZsS4MUFbwrNNM",
+        const firebaseConfig = {
+           apiKey: "AIzaSyDfmjWjPl786cVBXzqlsiZsS4MUFbwrNNM",
                 authDomain: "school-festival-e4c8d.firebaseapp.com",
                 databaseURL: "https://school-festival-e4c8d-default-rtdb.firebaseio.com",
                 projectId: "school-festival-e4c8d",
                 storageBucket: "school-festival-e4c8d.appspot.com",
                 messagingSenderId: "658868728855",
                 appId: "1:658868728855:web:8d7497c6838f5a42d21852"
+
+        };
+
+        const app = firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+        const analytics = firebase.analytics();
+
+        document.addEventListener('DOMContentLoaded', function() {
+            const counters = {
+                plain: { count: 0, max: 30, price: 100 },
+                choco: { count: 0, max: 100, price: 200 },
+                strawberry: { count: 0, max: 100, price: 250 },
+                matcha: { count: 0, max: 50, price: 300 },
+                jdk: { count: 0, max: 20, price: 500 }
             };
 
-            firebase.initializeApp(firebaseConfig);
-            const database = firebase.database();
-            const countersRef = database.ref('counters');
-
-            countersRef.once('value').then(snapshot => {
-                if (!snapshot.exists()) {
-                    countersRef.set({
-                        day1: { plain: 0, choco: 0, strawberry: 0, matcha: 0, jdk: 0 },
-                        day2: { plain: 0, choco: 0, strawberry: 0, matcha: 0, jdk: 0 }
-                    });
+            function updateCountersUI() {
+                for (const [key, counter] of Object.entries(counters)) {
+                    document.getElementById(`${key}-count`).textContent = `${counter.count}/${counter.max}`;
+                    document.getElementById(`${key}-remaining`).textContent = `残り: ${counter.max - counter.count} 個`;
+                    document.getElementById(`${key}-amount`).textContent = `${counter.count * counter.price} 円`;
                 }
+            }
+
+            function updateTotalAmount() {
+                const totalAmount = Object.values(counters).reduce((total, counter) => total + counter.count * counter.price, 0);
+                document.getElementById('total-amount').textContent = `${totalAmount} 円`;
+            }
+
+            function changeCount(type, increment) {
+                if (counters[type].count + increment >= 0 && counters[type].count + increment <= counters[type].max) {
+                    counters[type].count += increment;
+                    updateCountersUI();
+                    updateTotalAmount();
+                }
+            }
+
+            document.getElementById('day').addEventListener('change', function(event) {
+                const selectedDate = event.target.value;
+                document.getElementById('current-day').textContent = new Date(selectedDate).toLocaleDateString('ja-JP', {
+                    year: 'numeric', month: 'long', day: 'numeric'
+                });
             });
 
-            let currentDay = 'day1';
-            const limits = {
-                day1: { plain: 30, choco: 100, strawberry: 100, matcha: 50, jdk: 20 },
-                day2: { plain: 30, choco: 150, strawberry: 150, matcha: 40, jdk: 30 }
-            };
+            updateCountersUI();
+            updateTotalAmount();
 
-            const values = {
-                plain: 100,
-                choco: 100,
-                strawberry: 100,
-                matcha: 100,
-                jdk: 200
-            };
-
-            function updateUI(counters) {
-                if (!counters) return;
-                for (let type in counters) {
-                    const count = parseInt(counters[type], 10) || 0;
-                    const remaining = limits[currentDay][type] - count;
-                    document.getElementById(`${type}-count`).innerText = `${count}/${limits[currentDay][type]}`;
-                    document.getElementById(`${type}-remaining`).innerText = remaining === 0 ? '売り切れ' : `残り: ${remaining} 個`;
-                    document.getElementById(`${type}-amount`).innerText = `${count * values[type]} 円`;
-                }
-                updateTotals(counters);
-                updatePieCharts(counters);
-            }
-
-            function changeCount(type, delta) {
-                const currentCountRef = countersRef.child(`${currentDay}/${type}`);
-                currentCountRef.transaction(count => {
-                    const newCount = (parseInt(count, 10) || 0) + delta;
-                    if (newCount >= 0 && newCount <= limits[currentDay][type]) {
-                        return newCount;
-                    }
-                    return count;
-                });
-            }
-
-            function updateRealTimeListener() {
-                countersRef.child(currentDay).on('value', snapshot => {
-                    if (snapshot.exists()) {
-                        updateUI(snapshot.val());
-                    }
-                });
-            }
-
-            updateRealTimeListener();
-
-            function updateTotals(counters) {
-                const totalCount = Object.values(counters).reduce((sum, count) => sum + (parseInt(count, 10) || 0), 0);
-                const totalAmount = Object.entries(counters).reduce((sum, [key, count]) => sum + ((parseInt(count, 10) || 0) * values[key]), 0);
-
-                document.getElementById('total-count').innerText = `総数量: ${totalCount} 個`;
-                document.getElementById('total-amount').innerText = `総金額: ${totalAmount} 円`;
-            }
-
-            function createPieChart(canvasId, title, backgroundColors, unit) {
-                return new Chart(document.getElementById(canvasId).getContext('2d'), {
-                    type: 'pie',
-                    data: {
-                        labels: ['プレーン', 'チョコ', 'いちご', '抹茶', 'JDK'],
-                        datasets: [{
-                            data: [0, 0, 0, 0, 0],
-                            backgroundColor: backgroundColors
-                        }]
-                    },
-                    options: {
-                        responsive: true,
-                        maintainAspectRatio: true,
-                        plugins: {
-                            legend: {
-                                position: 'top'
-                            },
-                            title: {
-                                display: true,
-                                text: title
-                            },
-                            datalabels: {
-                                color: '#fff',
-                                formatter: (value, context) => {
-                                    if (value > 0) {
-                                        return `${context.chart.data.labels[context.dataIndex]}: ${value}${unit}`;
-                                    } else {
-                                        return '';
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    plugins: [ChartDataLabels]
-                });
-            }
-
-            let countPieChart = createPieChart('count-pie-chart', '数量の分布', ['#007BFF', '#8B4513', '#FF6347', '#3CB371', '#FFD700'], '個');
-            let valuePieChart = createPieChart('value-pie-chart', '金額の分布', ['#007BFF', '#8B4513', '#FF6347', '#3CB371', '#FFD700'], '円');
-
-            function updatePieCharts(counters) {
-                const countData = [
-                    parseInt(counters.plain, 10) || 0, 
-                    parseInt(counters.choco, 10) || 0, 
-                    parseInt(counters.strawberry, 10) || 0, 
-                    parseInt(counters.matcha, 10) || 0, 
-                    parseInt(counters.jdk, 10) || 0
-                ];
-                const valueData = [
-                    (parseInt(counters.plain, 10) || 0) * values.plain, 
-                    (parseInt(counters.choco, 10) || 0) * values.choco, 
-                    (parseInt(counters.strawberry, 10) || 0) * values.strawberry, 
-                    (parseInt(counters.matcha, 10) || 0) * values.matcha, 
-                    (parseInt(counters.jdk, 10) || 0) * values.jdk
-                ];
-
-                countPieChart.data.datasets[0].data = countData;
-                countPieChart.update();
-
-                valuePieChart.data.datasets[0].data = valueData;
-                valuePieChart.update();
-            }
-
-            function confirmDayChange(selectedDay) {
-                countersRef.child(currentDay).off('value');
-                currentDay = selectedDay === '1' ? 'day1' : 'day2';
-                document.getElementById('current-day').innerText = `現在の設定: ${currentDay === 'day1' ? '1日目' : '2日目'}`;
-                countersRef.child(currentDay).once('value').then(snapshot => {
-                    updateUI(snapshot.val() || {});
-                });
-                updateRealTimeListener();
-            }
-
-            const mediaQuery = window.matchMedia('(prefers-color-scheme: dark)');
-            function applyTheme(e) {
-                if (e.matches) {
-                    document.body.classList.add('dark-mode');
-                } else {
-                    document.body.classList.remove('dark-mode');
-                }
-            }
-            mediaQuery.addEventListener('change', applyTheme);
-            applyTheme(mediaQuery);
-
-            // ユーザーエージェントを使用してデバイスの種類を判定
             function getDeviceType() {
                 const ua = navigator.userAgent;
                 if (/Mobi|Android/i.test(ua)) {
@@ -557,7 +455,6 @@
                 countersElement.classList.add('desktop');
             }
 
-            // 画面の向きを監視してCSSクラスを変更
             function updateOrientation() {
                 const isPortrait = window.matchMedia("(orientation: portrait)").matches;
                 if (isPortrait) {
@@ -567,21 +464,15 @@
                     countersElement.classList.remove('portrait');
                     countersElement.classList.add('landscape');
                     if (deviceType === 'mobile') {
-                        countersElement.classList.add('landscape');
+                        countersElement.classList.add('mobile');
+                    } else {
+                        countersElement.classList.remove('mobile');
                     }
                 }
             }
 
-            window.addEventListener('orientationchange', updateOrientation);
             window.addEventListener('resize', updateOrientation);
-
-            // 初期表示時の向きを設定
             updateOrientation();
-
-            window.changeCount = changeCount;
-            window.confirmDayChange = confirmDayChange;
-
-            console.log('Firebase initialized with project:', firebaseConfig.projectId);
         });
     </script>
 </body>
