--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             }
         }
 
-      @media (max-width: 768px) {
+       @media (max-width: 768px) {
     /* 縦向き用の調整 */
     .portrait #counters {
         grid-template-columns: repeat(2, 1fr); /* 縦向きの場合は2列 */
@@ -344,58 +344,58 @@
     </div>
     <div class="current-day" id="current-day">現在の設定: 1日目</div>
     <div class="counters-section">
-        <div id="counters" class="landscape mobile"> <!-- 初期クラスを設定 -->
-    <div class="counter-container" id="plain-counter" style="border-top: 5px solid #007BFF; grid-area: item1;">
-        <h2>プレーン</h2>
-        <div class="count" id="plain-count">0/30</div>
-        <div class="remaining" id="plain-remaining">残り: 30 個</div>
-        <div class="amount" id="plain-amount">0 円</div>
-        <div class="button-group">
-            <button onclick="changeCount('plain', 1)" class="icon-plus" data-icon="+"></button>
-            <button onclick="changeCount('plain', -1)" class="icon-minus" data-icon="-"></button>
+        <div id="counters" class="landscape"> <!-- 初期クラスを設定 -->
+            <div class="counter-container" id="plain-counter" style="border-top: 5px solid #007BFF;">
+                <h2>プレーン</h2>
+                <div class="count" id="plain-count">0/30</div>
+                <div class="remaining" id="plain-remaining">残り: 30 個</div>
+                <div class="amount" id="plain-amount">0 円</div>
+                <div class="button-group">
+                    <button onclick="changeCount('plain', 1)" class="icon-plus" data-icon="+"></button>
+                    <button onclick="changeCount('plain', -1)" class="icon-minus" data-icon="-"></button>
+                </div>
+            </div>
+            <div class="counter-container" id="choco-counter" style="border-top: 5px solid #8B4513;">
+                <h2>チョコ</h2>
+                <div class="count" id="choco-count">0/100</div>
+                <div class="remaining" id="choco-remaining">残り: 100 個</div>
+                <div class="amount" id="choco-amount">0 円</div>
+                <div class="button-group">
+                    <button onclick="changeCount('choco', 1)" class="icon-plus" data-icon="+"></button>
+                    <button onclick="changeCount('choco', -1)" class="icon-minus" data-icon="-"></button>
+                </div>
+            </div>
+            <div class="counter-container" id="strawberry-counter" style="border-top: 5px solid #FF6347;">
+                <h2>いちご</h2>
+                <div class="count" id="strawberry-count">0/100</div>
+                <div class="remaining" id="strawberry-remaining">残り: 100 個</div>
+                <div class="amount" id="strawberry-amount">0 円</div>
+                <div class="button-group">
+                    <button onclick="changeCount('strawberry', 1)" class="icon-plus" data-icon="+"></button>
+                    <button onclick="changeCount('strawberry', -1)" class="icon-minus" data-icon="-"></button>
+                </div>
+            </div>
+            <div class="counter-container" id="matcha-counter" style="border-top: 5px solid #3CB371;">
+                <h2>抹茶</h2>
+                <div class="count" id="matcha-count">0/50</div>
+                <div class="remaining" id="matcha-remaining">残り: 50 個</div>
+                <div class="amount" id="matcha-amount">0 円</div>
+                <div class="button-group">
+                    <button onclick="changeCount('matcha', 1)" class="icon-plus" data-icon="+"></button>
+                    <button onclick="changeCount('matcha', -1)" class="icon-minus" data-icon="-"></button>
+                </div>
+            </div>
+            <div class="counter-container" id="jdk-counter" style="border-top: 5px solid #FFD700;">
+                <h2>JDK</h2>
+                <div class="count" id="jdk-count">0/20</div>
+                <div class="remaining" id="jdk-remaining">残り: 20 個</div>
+                <div class="amount" id="jdk-amount">0 円</div>
+                <div class="button-group">
+                    <button onclick="changeCount('jdk', 1)" class="icon-plus" data-icon="+"></button>
+                    <button onclick="changeCount('jdk', -1)" class="icon-minus" data-icon="-"></button>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="counter-container" id="choco-counter" style="border-top: 5px solid #8B4513; grid-area: item2;">
-        <h2>チョコ</h2>
-        <div class="count" id="choco-count">0/100</div>
-        <div class="remaining" id="choco-remaining">残り: 100 個</div>
-        <div class="amount" id="choco-amount">0 円</div>
-        <div class="button-group">
-            <button onclick="changeCount('choco', 1)" class="icon-plus" data-icon="+"></button>
-            <button onclick="changeCount('choco', -1)" class="icon-minus" data-icon="-"></button>
-        </div>
-    </div>
-    <div class="counter-container" id="strawberry-counter" style="border-top: 5px solid #FF6347; grid-area: item3;">
-        <h2>いちご</h2>
-        <div class="count" id="strawberry-count">0/100</div>
-        <div class="remaining" id="strawberry-remaining">残り: 100 個</div>
-        <div class="amount" id="strawberry-amount">0 円</div>
-        <div class="button-group">
-            <button onclick="changeCount('strawberry', 1)" class="icon-plus" data-icon="+"></button>
-            <button onclick="changeCount('strawberry', -1)" class="icon-minus" data-icon="-"></button>
-        </div>
-    </div>
-    <div class="counter-container" id="matcha-counter" style="border-top: 5px solid #3CB371; grid-area: item4;">
-        <h2>抹茶</h2>
-        <div class="count" id="matcha-count">0/50</div>
-        <div class="remaining" id="matcha-remaining">残り: 50 個</div>
-        <div class="amount" id="matcha-amount">0 円</div>
-        <div class="button-group">
-            <button onclick="changeCount('matcha', 1)" class="icon-plus" data-icon="+"></button>
-            <button onclick="changeCount('matcha', -1)" class="icon-minus" data-icon="-"></button>
-        </div>
-    </div>
-    <div class="counter-container" id="jdk-counter" style="border-top: 5px solid #FFD700; grid-area: item5;">
-        <h2>JDK</h2>
-        <div class="count" id="jdk-count">0/20</div>
-        <div class="remaining" id="jdk-remaining">残り: 20 個</div>
-        <div class="amount" id="jdk-amount">0 円</div>
-        <div class="button-group">
-            <button onclick="changeCount('jdk', 1)" class="icon-plus" data-icon="+"></button>
-            <button onclick="changeCount('jdk', -1)" class="icon-minus" data-icon="-"></button>
-        </div>
-    </div>
-</div>
         <div class="totals-container">
             <div class="total-title">合計</div>
             <div class="total-value" id="total-count">総数量: 0 個</div>
