--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
             white-space: nowrap; /* テキストが折り返されないようにする */
             width: 100%; /* 幅を100%に設定 */
             text-align: center; /* テキストを中央揃え */
+            display: flex;
+            justify-content: center; /* 中央揃え */
+            align-items: center; /* 垂直方向も中央揃え */
         }
 
         .amount {
@@ -229,6 +232,7 @@
                 grid-gap: 1rem;
                 justify-items: center;
                 justify-content: center;
+                padding-top: env(safe-area-inset-top); /* ノッチの中に配置 */
             }
 
             .counter-container {
@@ -268,6 +272,7 @@
     .landscape #counters {
         grid-template-columns: repeat(3, 1fr); /* 横向きの場合は3列 */
         grid-template-rows: repeat(2, 1fr); /* 2行 */
+        padding-top: env(safe-area-inset-top); /* ノッチの中に配置 */
     }
 
     .landscape.mobile #counters {
@@ -304,6 +309,7 @@
             .landscape #counters {
                 grid-template-columns: repeat(3, 1fr); /* 横向きの場合は3列 */
                 grid-template-rows: repeat(2, 1fr); /* 2行 */
+                padding-top: env(safe-area-inset-top); /* ノッチの中に配置 */
             }
 
             .landscape.mobile #counters {
