--- a/index.html
+++ b/index.html
@@ -52,12 +52,15 @@
 
         #counters {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(2, 1fr); /* デフォルトは2列 */
             grid-gap: 1rem;
             padding: 1rem;
             width: 100%;
+            max-width: 100%;
             justify-items: center;
             box-sizing: border-box;
+            margin: 0 auto;
+            justify-content: center;
         }
 
         .counter-container {
@@ -70,6 +73,7 @@
             transition: transform 0.2s, background-color 0.3s, color 0.3s;
             width: 100%;
             max-width: 300px; /* カウンターの最大幅を設定 */
+            height: 100%; /* カウンターの高さをボタンの高さに対応させる */
             box-sizing: border-box;
         }
 
@@ -160,6 +164,7 @@
             max-width: 90%;
             transition: background-color 0.3s, color 0.3s;
             box-sizing: border-box;
+            margin: 0 auto;
         }
 
         .dark-mode .totals-container {
@@ -203,6 +208,7 @@
             max-width: 1200px;
             padding: 1rem;
             box-sizing: border-box;
+            margin: 0 auto;
         }
 
         .chart-container {
@@ -215,18 +221,99 @@
         }
 
         @media (min-width: 769px) {
-            .charts-section {
-                flex-direction: row;
+            /* 横向きやPC用の調整 */
+            #counters {
+                grid-template-columns: repeat(5, 1fr); /* 1行に5つ */
+                grid-gap: 1rem;
+                justify-items: center;
                 justify-content: center;
+            }
+
+            .counter-container {
+                padding: 1.5rem;
+            }
+
+            .counter-container h2, .count, .remaining, .amount {
+                font-size: 1.5rem; /* フォントサイズ調整 */
+            }
+
+            .count {
+                font-size: 2.2rem;
+            }
+
+            button {
+                width: 40%; /* PC用の画面ではもう少し小さくする */
+            }
+
+            .charts-section {
+                flex-direction: row; /* グラフを横に配置 */
+                justify-content: center; /* 中央寄せに調整 */
             }
 
             .chart-container {
                 max-width: 400px;
-                margin: 0 5px;
+                margin: 0 5px; /* 円グラフの間隔を調整 */
             }
         }
 
+       @media (max-width: 768px) {
+    /* 縦向き用の調整 */
+    .portrait #counters {
+        grid-template-columns: repeat(2, 1fr); /* 縦向きの場合は2列 */
+        grid-template-rows: repeat(3, 1fr); /* 3行 */
+    }
+
+    .landscape #counters {
+        grid-template-columns: repeat(3, 1fr); /* 横向きの場合は3列 */
+        grid-template-rows: repeat(2, 1fr); /* 2行 */
+    }
+
+    .landscape.mobile #counters {
+        grid-template-columns: repeat(3, 1fr); /* 横向きスマホの場合は3列 */
+        grid-template-rows: auto auto; /* 自動調整 */
+        grid-template-areas:
+          "item1 item2 item3"
+          "item4 item5 .";
+    }
+
+    .counter-container {
+        width: 100%;
+        padding: 1rem;
+    }
+
+    .charts-section {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .chart-container {
+        max-width: 100%;
+        margin: 10px 0;
+    }
+}
+
         @media (max-width: 768px) {
+            /* 縦向き用の調整 */
+            .portrait #counters {
+                grid-template-columns: repeat(2, 1fr); /* 縦向きの場合は2列 */
+                grid-template-rows: repeat(3, 1fr); /* 3行 */
+            }
+
+            .landscape #counters {
+                grid-template-columns: repeat(3, 1fr); /* 横向きの場合は3列 */
+                grid-template-rows: repeat(2, 1fr); /* 2行 */
+            }
+
+            .landscape.mobile #counters {
+                grid-template-columns: 1fr 1fr 1fr; /* 横向きスマホの場合は3列 */
+                grid-template-rows: 1fr 1fr; /* 2行 */
+            }
+
+            .counter-container {
+                width: 100%;
+                padding: 1rem;
+            }
+
             .charts-section {
                 flex-direction: column;
                 justify-content: center;
@@ -367,16 +454,16 @@
                 for (let type in counters) {
                     const count = parseInt(counters[type], 10) || 0;
                     const remaining = limits[currentDay][type] - count;
-                    document.getElementById(`${type}-count`).innerText = `${count}/${limits[currentDay][type]}`;
-                    document.getElementById(`${type}-remaining`).innerText = remaining === 0 ? '売り切れ' : `残り: ${remaining} 個`;
-                    document.getElementById(`${type}-amount`).innerText = `${count * values[type]} 円`;
+                    document.getElementById(${type}-count).innerText = ${count}/${limits[currentDay][type]};
+                    document.getElementById(${type}-remaining).innerText = remaining === 0 ? '売り切れ' : 残り: ${remaining} 個;
+                    document.getElementById(${type}-amount).innerText = ${count * values[type]} 円;
                 }
                 updateTotals(counters);
                 updatePieCharts(counters);
             }
 
             function changeCount(type, delta) {
-                const currentCountRef = countersRef.child(`${currentDay}/${type}`);
+                const currentCountRef = countersRef.child(${currentDay}/${type});
                 currentCountRef.transaction(count => {
                     const newCount = (parseInt(count, 10) || 0) + delta;
                     if (newCount >= 0 && newCount <= limits[currentDay][type]) {
@@ -400,8 +487,8 @@
                 const totalCount = Object.values(counters).reduce((sum, count) => sum + (parseInt(count, 10) || 0), 0);
                 const totalAmount = Object.entries(counters).reduce((sum, [key, count]) => sum + ((parseInt(count, 10) || 0) * values[key]), 0);
 
-                document.getElementById('total-count').innerText = `総数量: ${totalCount} 個`;
-                document.getElementById('total-amount').innerText = `総金額: ${totalAmount} 円`;
+                document.getElementById('total-count').innerText = 総数量: ${totalCount} 個;
+                document.getElementById('total-amount').innerText = 総金額: ${totalAmount} 円;
             }
 
             function createPieChart(canvasId, title, backgroundColors, unit) {
@@ -429,7 +516,7 @@
                                 color: '#fff',
                                 formatter: (value, context) => {
                                     if (value > 0) {
-                                        return `${context.chart.data.labels[context.dataIndex]}: ${value}${unit}`;
+                                        return ${context.chart.data.labels[context.dataIndex]}: ${value}${unit};
                                     } else {
                                         return '';
                                     }
@@ -470,7 +557,7 @@
             function confirmDayChange(selectedDay) {
                 countersRef.child(currentDay).off('value');
                 currentDay = selectedDay === '1' ? 'day1' : 'day2';
-                document.getElementById('current-day').innerText = `現在の設定: ${currentDay === 'day1' ? '1日目' : '2日目'}`;
+                document.getElementById('current-day').innerText = 現在の設定: ${currentDay === 'day1' ? '1日目' : '2日目'};
                 countersRef.child(currentDay).once('value').then(snapshot => {
                     updateUI(snapshot.val() || {});
                 });
