--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
             font-size: 1.2rem;
             color: inherit;
             white-space: nowrap; /* テキストが折り返されないようにする */
+            font-family: 'Courier New', Courier, monospace; /* 等幅フォントを設定 */
+            width: 100px; /* 固定幅を設定 */
+            text-align: center; /* 中央揃え */
         }
 
         .amount {
